// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiPaymentDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`MultiPaymentDetail should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl ccSmMN absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxhUy ioeZqZ"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxiKw bopxJn"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    ASuusX…GQ3kqT
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxirZ hQTESw -mr-2 border-black"
                >
                  <div
                    class="sc-AxiKw iQZLaj"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                      title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 last:pb-0"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Recipients
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between text-sm font-semibold text-theme-neutral"
                  >
                    <div
                      class="ml-12"
                    >
                      Address
                    </div>
                    <div
                      class="ml-12"
                    >
                      Amount
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="sc-AxhCb fgIdEA"
                    color="danger"
                  >
                    100.00000000 BTC
                  </div>
                </div>
              </div>
              <div
                class="sc-AxirZ hQTESw border-theme-danger-200 text-theme-danger-dark"
              >
                <div
                  class="sc-AxiKw iQZLaj"
                  height="25"
                  width="25"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Smartbridge
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    Test
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxiKw bopxJn"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail should render as confirmed 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl ccSmMN absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxhUy ioeZqZ"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxiKw bopxJn"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    ASuusX…GQ3kqT
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxirZ hQTESw -mr-2 border-black"
                >
                  <div
                    class="sc-AxiKw iQZLaj"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                      title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 last:pb-0"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Recipients
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between text-sm font-semibold text-theme-neutral"
                  >
                    <div
                      class="ml-12"
                    >
                      Address
                    </div>
                    <div
                      class="ml-12"
                    >
                      Amount
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="sc-AxhCb fgIdEA"
                    color="danger"
                  >
                    100.00000000 BTC
                  </div>
                </div>
              </div>
              <div
                class="sc-AxirZ hQTESw border-theme-danger-200 text-theme-danger-dark"
              >
                <div
                  class="sc-AxiKw iQZLaj"
                  height="25"
                  width="25"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Smartbridge
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    Test
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Well Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-success-200 text-theme-success-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxiKw eDCpIH"
                          height="15"
                          width="15"
                        >
                          <svg>
                            checkmark.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail should render with recipients 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl ccSmMN absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxhUy ioeZqZ"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxiKw bopxJn"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    ASuusX…GQ3kqT
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxirZ hQTESw -mr-2 border-black"
                >
                  <div
                    class="sc-AxiKw iQZLaj"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                      title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 last:pb-0"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Recipients
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between text-sm font-semibold text-theme-neutral"
                  >
                    <div
                      class="ml-12"
                    >
                      Address
                    </div>
                    <div
                      class="ml-12"
                    >
                      Amount
                    </div>
                  </div>
                  <div
                    class="flex justify-between items-center py-4 true pt-2"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hCgvCw"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                            title="test"
                          />
                        </div>
                      </div>
                      <span
                        class="ml-4"
                      >
                        adsad12312xsd1w312e1s13203e12
                      </span>
                    </div>
                    <div
                      class="sc-AxhCb fgIdEA"
                      color="danger"
                    >
                      0.00000200 BTC
                    </div>
                  </div>
                  <div
                    class="flex justify-between items-center py-4 border-t border-dashed border-theme-neutral-300 "
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hCgvCw"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                            title="test"
                          />
                        </div>
                      </div>
                      <span
                        class="ml-4"
                      >
                        adsad12312xsd1w312e1s13203e13
                      </span>
                    </div>
                    <div
                      class="sc-AxhCb fgIdEA"
                      color="danger"
                    >
                      0.00001990 BTC
                    </div>
                  </div>
                  <div
                    class="flex justify-between items-center py-4 border-t border-dashed border-theme-neutral-300 pb-0"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hCgvCw"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                            title="test"
                          />
                        </div>
                      </div>
                      <span
                        class="ml-4"
                      >
                        adsad12312xsd1w312e1s13203e14
                      </span>
                    </div>
                    <div
                      class="sc-AxhCb fgIdEA"
                      color="danger"
                    >
                      0.00001990 BTC
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="sc-AxhCb fgIdEA"
                    color="danger"
                  >
                    100.00000000 BTC
                  </div>
                </div>
              </div>
              <div
                class="sc-AxirZ hQTESw border-theme-danger-200 text-theme-danger-dark"
              >
                <div
                  class="sc-AxiKw iQZLaj"
                  height="25"
                  width="25"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Smartbridge
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    Test
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Well Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-success-200 text-theme-success-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxiKw eDCpIH"
                          height="15"
                          width="15"
                        >
                          <svg>
                            checkmark.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail should render with wallet alias 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl ccSmMN absolute top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 mx-auto mt-24 mb-24 rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="relative"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5"
        >
          <button
            class="sc-AxhUy ioeZqZ"
            color="neutral"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="p-1"
            >
              <div
                class="sc-AxiKw bopxJn"
                height="12"
                width="12"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="py-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  <span
                    class="sc-AxjAm StDqN ml-2 text-theme-neutral"
                    data-testid="TruncateMiddle"
                  >
                    ASuusX…GQ3kqT
                  </span>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <div
                  class="sc-AxirZ hQTESw -mr-2 border-black"
                >
                  <div
                    class="sc-AxiKw iQZLaj"
                    height="25"
                    width="25"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                      title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 last:pb-0"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Recipients
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between text-sm font-semibold text-theme-neutral"
                  >
                    <div
                      class="ml-12"
                    >
                      Address
                    </div>
                    <div
                      class="ml-12"
                    >
                      Amount
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="sc-AxhCb jEeydN"
                    color="success"
                  >
                    100.00000000 BTC
                  </div>
                </div>
              </div>
              <div
                class="sc-AxirZ hQTESw border-theme-success-200 text-theme-success-dark"
              >
                <div
                  class="sc-AxiKw iQZLaj"
                  height="25"
                  width="25"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  21.00000000 BTC
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Smartbridge
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex justify-between"
                  >
                    Test
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        smartbridge.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 16:34:41
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex"
                  >
                    Not Confirmed
                    <div
                      class="flex w-6 h-6 ml-2 rounded-full bg-theme-danger-200 text-theme-danger-500"
                    >
                      <div
                        class="m-auto"
                      >
                        <div
                          class="sc-AxiKw bopxJn"
                          height="12"
                          width="12"
                        >
                          <svg>
                            cross-slim.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    ee4175…3ecefe
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Block ID
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    class="sc-AxjAm StDqN text-theme-primary-dark"
                    data-testid="TruncateMiddle"
                  >
                    71fd1a…5d67e9
                  </span>
                  <span
                    class="inline-block ml-4 text-theme-primary-300"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        copy.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
